syntax = "proto3";

package gateway.v1;

option go_package = "github.com/dheemanth-hn/event-streaming-gateway/gen/go/gateway/v1;gatewayv1";

import "google/protobuf/empty.proto";
import "event/v1/event.proto";

// Transformation type for routing rules
enum TransformationType {
  TRANSFORMATION_TYPE_UNSPECIFIED = 0;
  TRANSFORMATION_TYPE_NONE = 1;
  TRANSFORMATION_TYPE_JQ = 2;
  TRANSFORMATION_TYPE_CEL = 3;
  TRANSFORMATION_TYPE_TEMPLATE = 4;
}

// TransformationConfig defines how events should be transformed
message TransformationConfig {
  TransformationType type = 1;
  string expression = 2; // JQ, CEL, or template expression
}

// RoutingRule defines how events should be routed
message RoutingRule {
  event.v1.EventFilter filter = 1;
  TransformationConfig transformation = 2;
  string destination = 3; // Target endpoint or service
}

// Consumer represents a consumer application registered with the gateway
message Consumer {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated RoutingRule routing_rules = 4;
  bool active = 5;
  map<string, string> metadata = 6;
}

// Health status for the gateway
message HealthStatus {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_HEALTHY = 1;
    STATUS_DEGRADED = 2;
    STATUS_UNHEALTHY = 3;
  }

  Status status = 1;
  string message = 2;
  map<string, string> components = 3;
}

// Metrics for the gateway
message GatewayMetrics {
  int64 total_events_ingested = 1;
  int64 total_events_processed = 2;
  int64 active_subscriptions = 3;
  int64 active_connections = 4;
  double avg_latency_ms = 5;
  int64 error_count = 6;
  map<string, int64> events_by_source = 7;
  map<string, int64> events_by_type = 8;
}

// Request to register a new consumer
message RegisterConsumerRequest {
  Consumer consumer = 1;
}

// Response to register consumer request
message RegisterConsumerResponse {
  string consumer_id = 1;
  bool success = 2;
  string error_message = 3;
}

// Request to deregister a consumer
message DeregisterConsumerRequest {
  string consumer_id = 1;
}

// Response to deregister consumer request
message DeregisterConsumerResponse {
  bool success = 1;
  string error_message = 2;
}

// Request to list all consumers
message ListConsumersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

// Response containing list of consumers
message ListConsumersResponse {
  repeated Consumer consumers = 1;
  int32 total_count = 2;
}

// GatewayService provides gateway management operations
service GatewayService {
  // GetHealth returns the health status of the gateway
  rpc GetHealth(google.protobuf.Empty) returns (HealthStatus);

  // GetMetrics returns current metrics for the gateway
  rpc GetMetrics(google.protobuf.Empty) returns (GatewayMetrics);

  // ListConsumers returns a list of registered consumers
  rpc ListConsumers(ListConsumersRequest) returns (ListConsumersResponse);

  // RegisterConsumer registers a new consumer with the gateway
  rpc RegisterConsumer(RegisterConsumerRequest) returns (RegisterConsumerResponse);

  // DeregisterConsumer removes a consumer from the gateway
  rpc DeregisterConsumer(DeregisterConsumerRequest) returns (DeregisterConsumerResponse);
}
