syntax = "proto3";

package schema.v1;

option go_package = "github.com/dheemanth-hn/event-streaming-gateway/gen/go/schema/v1;schemav1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "event/v1/event.proto";

// Schema format types
enum SchemaFormat {
  SCHEMA_FORMAT_UNSPECIFIED = 0;
  SCHEMA_FORMAT_JSON_SCHEMA = 1;
  SCHEMA_FORMAT_AVRO = 2;
  SCHEMA_FORMAT_PROTOBUF = 3;
}

// Schema represents an event schema in the registry
message Schema {
  string id = 1;
  string name = 2;
  int32 version = 3;
  SchemaFormat format = 4;
  string definition = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  map<string, string> metadata = 8;
  string namespace = 9;
}

// Request to register a new schema
message RegisterSchemaRequest {
  string name = 1;
  SchemaFormat format = 2;
  string definition = 3;
  string namespace = 4;
  map<string, string> metadata = 5;
}

// Response to register schema request
message RegisterSchemaResponse {
  string schema_id = 1;
  int32 version = 2;
  bool success = 3;
  string error_message = 4;
}

// Request to get a schema
message GetSchemaRequest {
  oneof identifier {
    string schema_id = 1;
    SchemaRef schema_ref = 2;
  }
}

// SchemaRef references a schema by name and version
message SchemaRef {
  string name = 1;
  int32 version = 2;
  string namespace = 3;
}

// Response containing a schema
message GetSchemaResponse {
  Schema schema = 1;
}

// Request to validate an event against a schema
message ValidateEventRequest {
  event.v1.Event event = 1;
  string schema_id = 2;
}

// Response to validation request
message ValidateEventResponse {
  bool valid = 1;
  repeated ValidationError errors = 2;
  string error_message = 3;
}

// ValidationError describes a validation error
message ValidationError {
  string path = 1;
  string message = 2;
  string code = 3;
}

// Request to list schemas
message ListSchemasRequest {
  string namespace = 1;
  int32 limit = 2;
  int32 offset = 3;
}

// Response containing list of schemas
message ListSchemasResponse {
  repeated Schema schemas = 1;
  int32 total_count = 2;
}

// SchemaService provides schema registry operations
service SchemaService {
  // RegisterSchema registers a new schema in the registry
  rpc RegisterSchema(RegisterSchemaRequest) returns (RegisterSchemaResponse);

  // GetSchema retrieves a schema by ID or reference
  rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);

  // ValidateEvent validates an event against a schema
  rpc ValidateEvent(ValidateEventRequest) returns (ValidateEventResponse);

  // ListSchemas returns a list of schemas
  rpc ListSchemas(ListSchemasRequest) returns (ListSchemasResponse);
}
